# GitHubScrap

./: .gitignore  README.md  git-code-scraper.py  git-code-scraper.test.py  pyproject.toml
src/app/: git_code_scraper.py  main.py
src/config/: logging_config.py
src/github_scrap/app/: git_code_scrap.py  main.py
src/github_scraper/app/: git_code_scraper.py  main.py
src/github_scrapper/: __init__.py
src/github_scrapper/app/: git_code_scraper.py  main.py
tests/: test_git_code_scraper.py
