[tool.poetry]
name = "github-scraper"
version = "0.1.3"
description = "A tool to scrape code from Git repositories for LLM analysis."
authors = ["Panagiotis Ioannidis <pioannidis@pisquared.io>"]
readme = "README.md"
license = "MIT"

packages = [
    { include = "github_scraper", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
gitpython = "^3.1.30"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[tool.poetry.scripts]
github-scraper = "github_scraper.app.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
